# Unigen

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  Unigen.sln  config.yml
Unigen/: FileStream.cpp  FileStream.h  MemoryStream.cpp  MemoryStream.h  MetadataObject.cpp  MetadataObject.h  ReadMe.txt  Stream.h  Unigen.cpp  Unigen.vcxproj  Unigen.vcxproj.filters  getopt.h  il2cpp.h  stdafx.cpp
src/: Binary.cpp  Binary.h  CMakeLists.txt  Endian.h  FileStream.cpp  FileStream.h  IDCGenerator.cpp  IDCGenerator.h  MemoryStream.cpp  MetadataObject.cpp  MetadataObject.h  Stream.h  Unigen.cpp  assembly_crawler.h  assembly_crawler_arm.cc  assembly_crawler_arm.h  assembly_crawler_arm64.cc  assembly_crawler_arm64.h  binary.cc  binary.h  disassembler.cc  disassembler.h  idc_generator.h  il2cpp.h  instr.h  macho_binary.cc  macho_binary.h  main.rs  memory_stream.cc  memory_stream.h  metadata_loader.cc  metadata_loader.h  unigen.cc  utils.h
src/libunigen/: CMakeLists.txt  assembly_crawler.h  assembly_crawler_arm.cc  assembly_crawler_arm.h  assembly_crawler_arm64.cc  assembly_crawler_arm64.h  binary_container.cc  binary_container.h  disassembler.cc  idc_generator.h  lib.rs  macho_binary.cc.bak  macho_binary.h.bak  memory_stream.cc  memory_stream.h  metadata.rs  metadata_loader.cc  metadata_loader.h  stream.h  utils.h
src/libunigen/versions/21/: binary.h  idc_generator.cc  idc_generator.h  il2cpp.h  metadata_parser.cc  metadata_parser.h  version.h
src/unigen/: main.rs
src/versions/20/: binary.h  idc_generator.cc  idc_generator.h  il2cpp.h  metadata_parser.cc  metadata_parser.h
src/versions/21/: binary.cc  binary.h  idc_generator.h  metadata_parser.cc  metadata_parser.h
tests/: CMakeLists.txt
